--- a/packages/filecoin-api/tsconfig.lib.json
+++ b/packages/filecoin-api/tsconfig.lib.json
@@ -6,6 +6,9 @@
       "path": "../capabilities/tsconfig.lib.json"
     },
     {
+      "path": "../router/tsconfig.lib.json"
+    },
+    {
       "path": "../filecoin-client/tsconfig.lib.json"
     },
     {
