--- a/packages/upload-api/package.json
+++ b/packages/upload-api/package.json
@@ -130,6 +130,7 @@
     "@storacha/capabilities": "workspace:^",
     "@storacha/did-mailto": "workspace:^",
     "@storacha/filecoin-api": "workspace:^",
+    "@storacha/router": "workspace:^",
     "@storacha/indexing-service-client": "^2.6.5",
     "@ucanto/client": "catalog:",
     "@ucanto/interface": "catalog:",
