--- a/packages/upload-api/tsconfig.lib.json
+++ b/packages/upload-api/tsconfig.lib.json
@@ -3,6 +3,9 @@
   "include": ["src/**/*"],
   "references": [
     {
+      "path": "../router/tsconfig.lib.json"
+    },
+    {
       "path": "../filecoin-api/tsconfig.lib.json"
     },
     {
