fix: sync TypeScript project references for upload-tool

--- a/packages/ui/examples/react/upload-tool/tsconfig.app.json
+++ b/packages/ui/examples/react/upload-tool/tsconfig.app.json
@@ -6,6 +6,13 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "references": [
+    {
+      "path": "../components/tsconfig.lib.json"
+    },
+    {
+      "path": "../../../packages/react/tsconfig.lib.json"
+    }
+  ]
 }
-
