--- a/packages/ui/examples/react/upload-tool/tsconfig.json
+++ b/packages/ui/examples/react/upload-tool/tsconfig.json
@@ -21,6 +21,13 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "references": [
+    {
+      "path": "../components"
+    },
+    {
+      "path": "../../../packages/react"
+    }
+  ]
 }
-
