feat: add build and prepare scripts for git install support

--- a/packages/upload-api/package.json
+++ b/packages/upload-api/package.json
@@ -122,7 +122,9 @@
     "lint:fix": "eslint --fix '**/*.{js,ts}' && prettier --write '**/*.{js,ts,yml,json}' --ignore-path ../../.gitignore",
     "test": "mocha --bail --timeout 10s -n no-warnings -n experimental-vm-modules -n experimental-fetch 'test/**/*.spec.js'",
     "test-watch": "pnpm build && mocha --bail --timeout 10s --watch --parallel -n no-warnings -n experimental-vm-modules -n experimental-fetch --watch-files src,test",
-    "attw": "attw --pack ."
+    "attw": "attw --pack .",
+    "build": "tsc --build",
+    "prepare": "npm run build"
   },
   "dependencies": {
     "@storacha/access": "workspace:^",
