fix: type and build erros

--- a/packages/encrypt-upload-client/package.json
+++ b/packages/encrypt-upload-client/package.json
@@ -80,7 +80,7 @@
     "@lit-protocol/constants": "^8.0.8",
     "@lit-protocol/lit-client": "^8.2.3",
     "@lit-protocol/logger": "^8.0.2",
-    "@lit-protocol/networks": "^8.3.2",
+    "@lit-protocol/networks": "8.3.1",
     "@storacha/capabilities": "workspace:^",
     "@storacha/client": "workspace:^",
     "@storacha/upload-client": "workspace:^",
