feat: add basic telemetry to CLI

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -58,6 +58,13 @@
     "@ipld/car": "catalog:",
     "@ipld/dag-json": "catalog:",
     "@ipld/dag-ucan": "catalog:",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.67.2",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.208.0",
+    "@opentelemetry/resources": "^2.2.0",
+    "@opentelemetry/sdk-node": "^0.208.0",
+    "@opentelemetry/sdk-trace-base": "^2.2.0",
+    "@opentelemetry/semantic-conventions": "^1.38.0",
     "@storacha/access": "workspace:^",
     "@storacha/client": "workspace:^",
     "@storacha/did-mailto": "workspace:^",
