--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,9 @@ on:
   push:
     branches:
       - main
+      - 'fix/**'
   pull_request:
+  workflow_dispatch:
 
 # Needed for nx-set-shas when run on the main branch
 permissions:
