--- a/packages/encrypt-upload-client/package.json
+++ b/packages/encrypt-upload-client/package.json
@@ -65,7 +65,7 @@
     "prepare-environment": "playwright install",
     "rc": "npm version prerelease --preid rc",
     "test": "node --test $(find test -name '*.spec.js' ! -name '*.playwright.spec.js')",
-    "test:setup-certs": "mkdir -p test/mocks/playwright && cd test/mocks/playwright && (test -f cert.key || (npx mkcert create-ca && npx mkcert create-cert --domains localhost 127.0.0.1 ::1))",
+    "test:setup-certs": "mkdir -p test/mocks/playwright && cd test/mocks/playwright && (test -f cert.key || openssl req -x509 -newkey rsa:2048 -keyout cert.key -out cert.crt -days 365 -nodes -subj \"/CN=localhost\")",
     "test:browser": "npm run test:setup-certs && npx playwright test"
   },
   "dependencies": {
