--- a/packages/encrypt-upload-client/package.json
+++ b/packages/encrypt-upload-client/package.json
@@ -64,7 +64,7 @@
     "attw": "attw --pack .",
     "prepare-environment": "playwright install",
     "rc": "npm version prerelease --preid rc",
-    "test": "node --test --test-timeout=60000 $(find test -name '*.spec.js' ! -name '*.playwright.spec.js')",
+    "test": "node scripts/run-tests.js",
     "test:setup-certs": "mkdir -p test/mocks/playwright && cd test/mocks/playwright && (test -f cert.key || openssl req -x509 -newkey rsa:2048 -keyout cert.key -out cert.crt -days 365 -nodes -subj \"/CN=localhost\")",
     "test:browser": "npm run test:setup-certs && npx playwright test"
   },
@@ -105,6 +105,7 @@
     "@playwright/test": "catalog:",
     "@storacha/eslint-config": "workspace:^",
     "esbuild": "^0.25.1",
+    "glob": "^13.0.0",
     "mkcert": "^3.2.0",
     "typescript": "catalog:"
   },
