--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,14 +64,14 @@ jobs:
       # pre-build console to get around some odd bugs that seem to be related to nx 21
       # TODO: Try to get rid of this later. If the build ever succeeds without
       # running this step first, it's working correctly, and we can delete this.
-      # - name: Pre-build console
-      #   shell: bash
-      #   working-directory: ./packages/console
-      #   run: |
-      #     pnpm install
-      #     pnpm nx build @storacha/ui-core
-      #     pnpm nx build @storacha/ui-react
-      #     pnpm build
+      - name: Pre-build console
+        shell: bash
+        working-directory: ./packages/console
+        run: |
+          pnpm install
+          pnpm nx build @storacha/ui-core
+          pnpm nx build @storacha/ui-react
+          pnpm build
 
       - name: Prepare environment
         run: pnpm nx affected -t prepare-environment
