--- a/packages/encrypt-upload-client/package.json
+++ b/packages/encrypt-upload-client/package.json
@@ -58,8 +58,8 @@
   "scripts": {
     "dev": "tsc --build --watch --preserveWatchOutput",
     "clean": "rm -rf dist *.tsbuildinfo",
-    "lint": "tsc --build && eslint \"**/*.{js,ts}\" --ignore-pattern \"lit-actions/**\" && prettier --check \"**/*.{js,ts,yml,json}\" \"!**/.attw.json\" --ignore-path ../../.gitignore",
-    "lint:fix": "tsc --build && eslint \"**/*.{js,ts}\" --fix && prettier --write \"**/*.{js,ts,yml,json}\" \"!**/.attw.json\" --ignore-path ../../.gitignore",
+    "lint": "tsc --build && eslint \"**/*.{js,ts}\" --ignore-pattern \"lit-actions/**\" --ignore-pattern \"test/mocks/playwright/**\" && prettier --check \"**/*.{js,ts,yml,json}\" \"!**/.attw.json\" --ignore-path ../../.gitignore",
+    "lint:fix": "tsc --build && eslint \"**/*.{js,ts}\" --fix --ignore-pattern \"test/mocks/playwright/**\" && prettier --write \"**/*.{js,ts,yml,json}\" \"!**/.attw.json\" --ignore-path ../../.gitignore",
     "build-actions": "node lit-actions/esbuild.js",
     "attw": "attw --pack .",
     "prepare-environment": "playwright install",
