--- a/packages/encrypt-upload-client/package.json
+++ b/packages/encrypt-upload-client/package.json
@@ -66,7 +66,7 @@
     "rc": "npm version prerelease --preid rc",
     "test": "node --test $(find test -name '*.spec.js' ! -name '*.playwright.spec.js')",
     "test:setup-certs": "mkdir -p test/mocks/playwright && cd test/mocks/playwright && (test -f cert.key || (npx mkcert create-ca && npx mkcert create-cert --domains localhost 127.0.0.1 ::1))",
-    "test:browser": "npm run test:setup-certs && npx playwright test"
+    "test:browser": "npm run test:setup-certs && node scripts/test-browser.js"
   },
   "dependencies": {
     "@ipld/car": "catalog:",
