fix(encrypt-upload-client): add fetch timeout and queue drain to prevent CI hangs
- Add 5s timeout per fetch in revocation check to prevent hanging on slow endpoints
- Use AbortSignal.any() to compose global abort and per-fetch timeouts
- Add queue.onIdle() in finally block to ensure all queue tasks complete
- Simplify test commands to direct Playwright/test runner invocation
- Remove redundant test wrapper scripts from CLI, encrypt-upload-client, and UI packages
- Keep Playwright global teardown with process.exit(0) in CI to force clean exit
- Revert unnecessary lint ignore patterns and focus on actual hang fix

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,7 +14,7 @@
     "dev": "pnpm typecheck --watch --preserveWatchOutput",
     "lint": "eslint '**/*.{js,ts}' && prettier --check '**/*.{js,ts,yml,json}' --ignore-path ../../.gitignore",
     "lint:fix": "eslint --fix '**/*.{js,ts}' && prettier --write '**/*.{js,ts,yml,json}' --ignore-path ../../.gitignore",
-    "test": "node scripts/test.js"
+    "test": "entail **/*.spec.js"
   },
   "repository": {
     "type": "git",
