--- a/packages/encrypt-upload-client/package.json
+++ b/packages/encrypt-upload-client/package.json
@@ -58,15 +58,15 @@
   "scripts": {
     "dev": "tsc --build --watch --preserveWatchOutput",
     "clean": "rm -rf dist *.tsbuildinfo",
-    "lint": "tsc --build && eslint \"**/*.{js,ts}\" --ignore-pattern \"lit-actions/**\" --ignore-pattern \"test/mocks/playwright/**\" && prettier --check \"**/*.{js,ts,yml,json}\" \"!**/.attw.json\" --ignore-path ../../.gitignore",
-    "lint:fix": "tsc --build && eslint \"**/*.{js,ts}\" --fix --ignore-pattern \"test/mocks/playwright/**\" && prettier --write \"**/*.{js,ts,yml,json}\" \"!**/.attw.json\" --ignore-path ../../.gitignore",
+    "lint": "tsc --build && eslint '**/*.{js,ts}' --ignore-pattern 'lit-actions/**' && prettier --check '**/*.{js,ts,yml,json}' --ignore-path ../../.gitignore",
+    "lint:fix": "tsc --build && eslint '**/*.{js,ts}' --fix && prettier --write '**/*.{js,ts,yml,json}' --ignore-path ../../.gitignore",
     "build-actions": "node lit-actions/esbuild.js",
     "attw": "attw --pack .",
     "prepare-environment": "playwright install",
     "rc": "npm version prerelease --preid rc",
     "test": "node --test $(find test -name '*.spec.js' ! -name '*.playwright.spec.js')",
     "test:setup-certs": "mkdir -p test/mocks/playwright && cd test/mocks/playwright && (test -f cert.key || (npx mkcert create-ca && npx mkcert create-cert --domains localhost 127.0.0.1 ::1))",
-    "test:browser": "npm run test:setup-certs && node scripts/test-browser.js"
+    "test:browser": "npm run test:setup-certs && npx playwright test"
   },
   "dependencies": {
     "@ipld/car": "catalog:",
