fix: enable browser tests and fix tsconfig
- Add test:browser to CI workflow
- Remove playwright from tsconfig exclude

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,6 @@ jobs:
 
       # Run CI tasks over all affected projects
       # TODO: Add `attw` back once fixed.
-      - run: pnpm nx affected -t typecheck lint build test depcheck
+      - run: pnpm nx affected -t typecheck lint build test test:browser depcheck
         env:
           NX_VERBOSE_LOGGING: ${{ runner.debug && 'true' || 'false' }}
