--- a/packages/encrypt-upload-client/project.json
+++ b/packages/encrypt-upload-client/project.json
@@ -1,6 +1,7 @@
 {
   "$schema": "./../../node_modules/nx/schemas/project-schema.json",
   "targets": {
-    "test": {}
+    "test": {},
+    "test:browser": {}
   }
 }
